o The color() statement now supports specifying colors as strings, e.g. color("Red")
o if() and else() can now take any value type as parameter. false, 0, empty string and empty vector or illegal value type will evaluate as false, everything else as true.
o Strings can now be lexographically compared using the <, <=, >, >= operators
o The version() function will return the OpenSCAD version as a string, e.g. "2011.10"

Bugfixes:
o square() crashed if any of the dimensions were zero
o Flush Caches didn't flush cached USE'd modules
o STL export should be a bit more robust
o Dropping a file into the editor under Windows didn't work (double C:/C:/ problem)


Deprecations:
o dxf_linear_extrude() and dxf_rotate_extrude() are now deprecated.
  Use linear_extrude() and rotate_extrude() instead.
o The file, layer, origin and scale parameters to linear_extrude() and rotate_extrude()
  are now deprecated. Use an import() child instead.
o import_dxf(), import_stl() and import_off() are now deprecated. Use import() instead.

OpenSCAD 2011.06
================

o Added "Export as Image" menu.

Bugfixes:
o Cylinder tesselation broke existing models which are using cylinders
  for e.g. captured nut slots and are dependent on the orientation not
  changing.
o DXF output couldn't be imported into e.g. AutoCAD and Solidworks after updating
  to using the AutoCAD 2000 (AC1015) format. Reverted to the old entity-only output,
  causing LWPOLYLINES to not exported allowed anymore.



OpenSCAD 2011.04
================

o Added hull() for convex hulls (2D object only)
o minkowski() now supports 2D objects
o Added functions: rands(), sign()
o Now supports escaping of the following characters in strings: \n, \t, \r, \\, \"
o Support nested includes
o Improved parsing of numbers
o DXF: output LWPOLYLINE instead of just LINE entities
o Bugfixes: More robust DXF export, setting $fs/$fa to 0 caused a crash
o Some bugs fixed, maybe some new bugs added

OpenSCAD 2010.05
================
