@@ -13,6 +13,10 @@ win32 {
 } else {
   isEmpty(VERSION) VERSION = $$system(date "+%Y.%m.%d")
 }
+VERSION_SPLIT=$$split(VERSION, ".")
+VERSION_YEAR=$$member(VERSION_SPLIT, 0)
+VERSION_MONTH=$$member(VERSION_SPLIT, 1)
+VERSION_DAY=$$member(VERSION_SPLIT, 2)
 
 #configure lex / yacc
 win32 {
@@ -31,7 +35,8 @@ win32 {
     INCLUDEPATH += $$(MPFRDIR)
 }
 
-DEFINES += OPENSCAD_VERSION=$$VERSION
+DEFINES += OPENSCAD_VERSION=$$VERSION OPENSCAD_YEAR=$$VERSION_YEAR OPENSCAD_MONTH=$$VERSION_MONTH
+!isEmpty(VERSION_DAY): DEFINES += OPENSCAD_DAY=$$VERSION_DAY
 win32:DEFINES += _USE_MATH_DEFINES NOMINMAX _CRT_SECURE_NO_WARNINGS YY_NO_UNISTD_H
 
 #disable warning about too long decorated names
