@@ -23,3 +23,4 @@ a = lookup();
 a = dxf_dim();
 a = dxf_cross();
 a = version();
+a = version_num();
