@@ -10,7 +10,8 @@ o The color() statement now supports an alpha parameter, e.g. color(c=[1,0,0], a
 o The color() statement now supports specifying colors as strings, e.g. color("Red")
 o if() and else() can now take any value type as parameter. false, 0, empty string and empty vector or illegal value type will evaluate as false, everything else as true.
 o Strings can now be lexographically compared using the <, <=, >, >= operators
-o The version() function will return the OpenSCAD version as a string, e.g. "2011.10"
+o The version() function will return the OpenSCAD version as a vector, e.g. [2011, 09]
+o The version_num() function will return the OpenSCAD version as a number, e.g. 20110923
 
 Bugfixes:
 o square() crashed if any of the dimensions were zero
